--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ deploy:
   user_id: annih
   client_key: .travis/annih.pem
   cookbook_category: Other
+  skip_cleanup: true
   on:
     tags: true
 before_deploy:
-- openssl aes-256-cbc -K $encrypted_25aad33cfba1_key -iv $encrypted_25aad33cfba1_iv -in .travis/annih.pem.enc -out .travis/annih.pem -d
+- openssl aes-256-cbc -K $encrypted_56687d638eba_key -iv $encrypted_56687d638eba_iv -in .travis/annih.pem.enc -out .travis/annih.pem -d
