Change one of the test device
Use a device with subsystem ids.

--- a/spec/data/devices/device_1/values.yaml
+++ b/spec/data/devices/device_1/values.yaml
@@ -1,4 +1,5 @@
-vendor_id: '8086'
-device_id: '7113'
-rev: '08'
-class_id: '0680'
+vendor_id: '1af4'
+device_id: '1000'
+class_id: '0200'
+svendor_id: '1af4'
+sdevice_id: '0001'
