--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,13 @@ rvm:
 - 2.3.0
 sudo: false
 deploy:
+  edge:
+    source: criteo-forks/dpl
+    branch: chef_ruby2
   provider: chef-supermarket
   user_id: annih
   client_key: .travis/annih.pem
+  cookbook_name: pci
   cookbook_category: Other
   skip_cleanup: true
   on:
